k8s/backend-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-canary
  labels:
    app: backend
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: canary
  template:
    metadata:
      labels:
        app: backend
        version: canary
    spec:
      containers:
      - name: backend
        image: ruthran1803/quiz-backend:v2
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
          limits:
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
