k8s/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: backend
  labels:
    app: backend

spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ruthran1803/quiz-backend:v2
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
          limits:
            cpu: "500m"
            
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20

        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
