k8s/quiz-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-backend
  template:
    metadata:
      labels:
        app: quiz-backend
    spec:
      containers:
      - name: quiz-backend
        image: ruthran1803/quiz-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-backend-service
  labels:
    app: quiz-backend
spec:
  selector:
    app: quiz-backend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-frontend
  template:
    metadata:
      labels:
        app: quiz-frontend
    spec:
      containers:
      - name: quiz-frontend
        image: ruthran1803/quiz-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-frontend-service
spec:
  selector:
    app: quiz-frontend
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 80
  type: LoadBalancer
